--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   }
 }
