--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
     "body-parser": "^2.2.0",
     "connect-sqlite3": "^0.9.15",
