--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "webv3",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "better-sqlite3": "^11.9.1",
-    "body-parser": "^2.2.0",
-    "connect-sqlite3": "^0.9.15",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "express-session": "^1.18.1",
-    "multer": "^1.4.5-lts.2",
-    "tmp": "^0.2.3"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "supertest": "^7.1.0"
-  }
+    "name": "webv3",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "dev": "nodemon server.js",
+        "lint": "eslint . --ext .js",
+        "lint:fix": "eslint . --ext .js --fix",
+        "format": "prettier --check ./**/*.{js,json,css,md}",
+        "format:fix": "prettier --write ./**/*.{js,json,css,md}"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "better-sqlite3": "^11.9.1",
+        "connect-sqlite3": "^0.9.15",
+        "ejs": "^3.1.10",
+        "express": "^4.21.2",
+        "express-session": "^1.18.1",
+        "multer": "^1.4.5-lts.2",
+        "tmp": "^0.2.3"
+    },
+    "devDependencies": {
+        "eslint": "^8.57.1",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^10.1.1",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-prettier": "^5.2.6",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.9",
+        "prettier": "^3.5.3",
+        "supertest": "^7.1.0"
+    }
 }
