--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@google/generative-ai": "^0.24.0",
         "bcrypt": "^5.1.1",
         "better-sqlite3": "^11.9.1",
         "connect-sqlite3": "^0.9.15",
+        "dotenv": "^16.4.7",
         "ejs": "^3.1.10",
         "express": "^4.21.2",
         "express-session": "^1.18.1",
